youtube-compact.css
/* Copyright Daniel Smith
   licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
   http://creativecommons.org/licenses/by-nc-sa/4.0 */

@-moz-document domain("youtube.com") {

/* comment header spacing */
ytd-comment-thread-renderer {margin-bottom: .3rem}
#header.ytd-comment-renderer,
#author-text.yt-simple-endpoint.ytd-comment-renderer {margin-bottom: 0}

/* actions and rating sizing */

paper-button.ytd-button-renderer {padding: .2rem}
yt-icon-button.ytd-toggle-button-renderer {
	height: 2rem;
	padding: .1rem;
}
#creator-heart-button.ytd-creator-heart-renderer {height: 1.5rem}

/* save to playlist menu */
#playlists.ytd-add-to-playlist-renderer {padding: 1rem}
#playlists.ytd-add-to-playlist-renderer > *.ytd-add-to-playlist-renderer:not(:last-child) {margin-bottom: 0}

}

